test: корректировка тестов CarBrand, документация swagger для created_at/updated_at
